cmake_minimum_required(VERSION 3.2)
project( speed_test )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( server server.cpp )
add_executable( client client.cpp )
target_link_libraries( server ${OpenCV_LIBS} )
target_link_libraries( client ${OpenCV_LIBS} )